[gd_scene load_steps=5 format=2]

[ext_resource path="res://Spell Casts/Mines/MinePlaced.png" type="Texture" id=1]
[ext_resource path="res://ModelsScript/MineSpellModelScript.gd" type="Script" id=2]
[ext_resource path="res://Models/SpellModels/MineSpellFrames.tres" type="SpriteFrames" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 9.12075

[node name="Mine" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MineSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ExplodeAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0.263519, -0.263519 )
scale = Vector2( 0.264957, 0.279705 )
frames = ExtResource( 3 )
[connection signal="animation_finished" from="ExplodeAnimation" to="." method="_on_ExplodeAnimation_animation_finished"]
